<resources>

    <string name="app_name">CustomComponents</string>
    <string name="title_activity_line_chart_view">折线图</string>
    <string name="title_activity_curve_chart_view">曲线图</string>
    <string name="title_activity_password_input_view">密码输入框</string>
    <string name="title_activity_clean_edit_text">带清空按钮的输入框</string>
    <string name="title_activity_credit_view">信用分仪表盘</string>
    <string name="title_activity_ripple_view">水波纹扩散</string>
    <string name="title_activity_indicator_view">指示器</string>
    <string name="title_activity_particle_progress_bar">粒子动画进度条</string>
    <string name="title_activity_caliper_view">游标卡尺</string>
    <string name="title_activity_number_view">单个数字边框</string>
    <string name="title_activity_number_text_animator">数字动画</string>
    <string name="title_activity_color_picker_view">颜色拾取器</string>
    <string name="title_activity_gradient_rotate_view">渐变旋转</string>
    <string name="title_activity_round_bevel_rect_view">圆角/平角矩形(四个角单独半径)</string>
    <string name="title_activity_recycler_view_divider">RecyclerView Divider</string>
    <string name="title_activity_alphabet_index_bar">字母索引栏(仿微信通讯录)</string>
    <string name="title_activity_draggable_view">可拖拽控件</string>
    <string name="title_activity_title_bar_layout">标题栏</string>
    <string name="title_activity_fragment_visibility">Fragment 对用户可见回调</string>
    <string name="title_activity_count_down_timer">倒计时（天时分秒）</string>
    <string name="title_activity_debounce_throttle">防抖、节流</string>
    <string name="title_activity_app_widget">AppWidget 桌面小组件</string>

    <string name="hint_indicator_view_limit">每次移动的个数</string>
    <string name="hint_progress_bar_limit">每次增减的进度</string>

    <string name="search">搜索</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <string name="add">增加</string>
    <string name="subtract">减少</string>
    <string name="anim_enter">入场动画</string>
    <string name="anim_exit">退场动画</string>
    <string name="anim">动画</string>
    <string name="snap_horizontal">水平吸附</string>
    <string name="snap_vertical">垂直吸附</string>
    <string name="out_of_bounds">允许超出边界</string>
    <string name="save">保存</string>
    <string name="dialog">弹窗</string>
    <string name="sure">确定</string>
    <string name="count_down">倒计时</string>
    <string name="is_horizontal">是否水平</string>
    <string name="is_include_edge">是否包含边缘</string>
    <string name="is_ignore_divider">是否忽略偶数分隔线</string>

    <string name="constraint_layout">ConstraintLayout</string>
    <string name="frame_layout">FrameLayout</string>

    <string name="alphabet_index_bar_footer_text">%d个朋友</string>

    <string name="draggable_view_save_layout_params">退出页面自动保存 LayoutParams</string>

    <string name="app_widget_time_title">Time 时间</string>
    <string name="app_widget_time_description">Time 时间 Description</string>

</resources>
