<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_tran_87">

    <com.mask.customcomponents.view.RaykiteProgressBar
        android:id="@+id/layout_bar"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_limit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/hint_progress_bar_limit"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:text="0.088"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_bar" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSubtract"
        android:text="@string/subtract"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_limit" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_subtract"
        app:layout_constraintTop_toTopOf="@+id/btn_subtract" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStart"
        android:text="@string/start"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_subtract" />

</android.support.constraint.ConstraintLayout>