<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="@color/black_tran_54"
        app:layout_constraintBottom_toBottomOf="@+id/layout_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_indicator" />

    <com.mask.customcomponents.view.IndicatorView
        android:id="@+id/layout_indicator"
        style="@style/IndicatorView_Base"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:indicator_count="8"
        tools:indicator_selectedPosition="2" />

    <EditText
        android:id="@+id/edt_limit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/hint_indicator_view_limit"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:text="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_indicator" />

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPrevious"
        android:text="@string/previous"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_limit" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNext"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_previous"
        app:layout_constraintTop_toTopOf="@+id/btn_previous" />

</androidx.constraintlayout.widget.ConstraintLayout>