<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/grid_view_space"
        android:background="#80FF0000"
        android:padding="@dimen/grid_view_space"
        app:layout_constraintBottom_toTopOf="@+id/layout_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view_constraint"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="@dimen/grid_view_space"
            android:background="#80FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/grid_view_space"
        android:background="#8000FF00"
        android:padding="@dimen/grid_view_space"
        app:layout_constraintBottom_toTopOf="@+id/layout_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_constraint">

        <View
            android:id="@+id/view_frame"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/grid_view_space"
            android:background="#80FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/cb_out_of_bounds"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/out_of_bounds"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_anim"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/anim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cb_out_of_bounds"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_snap_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/snap_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cb_anim"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_snap_vertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/snap_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cb_snap_horizontal"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>